tests/src/frontend/typechecking/invalid/unused_locals_in_class_default.sk
class C1(
  f: Int = {
    x = 1;
    42
  },
)
